# MasterThesis_EdgeAI

./: .gitignore  CMakeLists.txt  README.md  pre_setup.cmake  sdkconfig.old  setup
main/: CMakeLists.txt  bindgen.sh  bindings.h  build.zig  build.zig.zon  linker_placeholder.c
main/examples/: host_app.zig
main/log_data/: log_warn.txt
main/model/: README.md  common_functions.zig  dataloader.zig  layers.zig  model_builder.zig  optimizer.zig  root.zig
main/src/: bindings.zig  esp32s3_utils.zig  gpio.zig  main.zig
